--- a/style.css
+++ b/style.css
@@ -78,17 +78,12 @@ a {
         transition: color 0.2s ease;
         cursor: pointer;
     }
-    
-
 
 /* CLASSES */ 
 
 .box { 
-    width: 800px;
+    max-width: 700px;
 
-    max-width: 50vw;
-    min-width: 600px;
- 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -167,6 +162,15 @@ a {
           justify-content: space-between;
         }
 
+          .role {
+            margin-bottom: 4px;
+          }
+
+          .company { 
+            margin-top: -4px;
+            margin-bottom: 4px;
+          }
+
           .content-cell-right-box-main { 
             border: 0px green solid;
             flex: auto;
@@ -197,18 +201,15 @@ a {
 .gallery {
   border: 1px solid orange;
   display: flex;
-  height: 200px;
+  height: 300px;
 
 }
 
   .image-block { 
     border: 2px solid blue; 
-    flex: 1 30 0;
+    flex: 1 0 0;
     transition: flex-grow .5s ease-out;
 
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
 
     margin: 10px 8px 0px 0px; /*top right bottom left*/
     border-radius: 10px;
@@ -216,21 +217,23 @@ a {
     /* minimum size when shrinking */
     overflow: hidden; /* content can clip rather than expand size */
 
-    background-repeat: no-repeat;
-    background-position: left left;
-    background-size: cover; /* scales image to cover whole div */
   }
 
+  .image-block img {
+    max-height: 300px;     
+    width: auto;          
+    height: auto;           
+    object-fit: contain;    /* Ensure no cropping/distortion */
+    transition: all 10s ease-out;
+}
+
+
     .image-block:hover { 
-      flex-grow: 50;
-      transition: flex-grow .50s ease-in, 
-  
+      flex-basis: auto;
+      transition: all 10s ease-in; 
     }
 
-    .image-left, .image-right {
-      border: 2px solid red;
-      flex: 1 1 auto
-    }
+
   
 
 /* margin accounts for view   port*/ 
@@ -242,12 +245,19 @@ a {
 
 }
 
-  /* gallery images */
-    #image_01 { 
-      background-image: url("page-assets/gallery/pops.jpg");
-   
-    }
 
 #bio .content-cell-body{ 
-  font-size: 18px;
+  font-size: 17px;
+
 }
+
+#bio img { 
+  height: 150px;
+  width: 150px;
+  border-radius: 6%;    
+}
+
+#bio .content-cell-left { 
+  min-width:  150px;
+}
+
